fix: footer overlap on mobile

--- a/src/components/TodoMvc/styles.css
+++ b/src/components/TodoMvc/styles.css
@@ -41,3 +41,15 @@ body {
     bottom: 0;
     left: 10px;
 }
+
+@media (max-width: 430px) {
+    .footer {
+        margin-bottom: 50px;
+    }
+    
+    .filters {
+        bottom: auto;
+        display: flex;
+        flex-direction: column;
+    }
+}
